--- a/python/templates/create_note.html
+++ b/python/templates/create_note.html
@@ -2,13 +2,26 @@
 <head>
     <title>Сервис одноразовых записок</title>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 </head>
 <body>
-    <form id="data" action="/generate" method="post">
-        <p><textarea placeholder="Введите вашу записку" name="note_input"></textarea></p>
-        <p>
-            <button type="submit"> Сохранить </button>
-        </p>
-    </form>
+    <div class="container-fluid">
+        <h3> Сервис одноразовых записок</h3>
+        <form id="data" action="/generate" method="post">
+            <div class="mb-3 row">
+                <div class="col-sm">
+                    <textarea class ="form-control-plaintext" placeholder="Введите вашу записку" name="note_input"></textarea>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-sm">
+                    <button type="submit" class="btn btn-primary mb-3"> Сохранить </button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
